(Format: Year/Month/Day)
Changes for 0.9.2:
*03/04/28:
   * Fix remembering (and general init) of decorations (Simon)
     Window.hh/cc
   * Fix handleEvent issues, plus detachClient crash (Simon)
     Window.cc Screen.cc Remember.cc
*03/04/27:
   * Fixed execute on screen bug (Henrik)
     FbCommands.hh/cc
   * Fixed scaled pixmap (Henrik)
     FbPixmap.hh/cc
   * Fixed sloppy focus - workspace warp bug (Henrik)
     Window.cc
   * Fix cassert #includes (Simon)
     Window.cc WinClient.cc FbRun.cc signaltest.cc
*03/04/26:
   * Moved StringUtil to FbTk (Henrik)
     Screen.cc, Workspace.cc, Keys.cc, XmbFontImp.cc	 
   * Removed DrawUtil.hh/cc and nl_types_cygnus.h (Henrik)
   * Fixed menu bug (Henrik)
     Screen.cc, FbTk/Menu.cc
   * Add remember layer (Simon)
     Remember.hh/cc
   * Add remember patch integration code (Simon)
     - note: does not include "startup" menu
     - save on close disabled atm, due to other issues...
     - enabled in configure by default, disable with --disable-remember
     - BIG thanks to Xavier Brouckaert (xbr at info.ucl.ac.be) for 
         the original remember patch!
     Makefile.am Remember.hh/cc Screen.cc Window.hh/cc fluxbox.cc
*03/04/25:
   * Fix small gcc 3.3 build issue (Simon)
     Window.hh/cc
   * Add UnderMousePlacement policy, plus minor positioning fix (Simon)
     -> Patch originally contributed by "Mike" (lgn@users.sf)
     Screen.hh Workspace.cc fluxbox.cc Window.cc
   * Fixed so WinButton updates sticky state from FluxboxWindow (Henrik)
     WinButton.hh/cc, Screen.cc   
   * Added basic drawable functions to FbWindow  (Henrik)
      * drawLine, drawRect, fillRect, copyArea
     FbWindow.hh/cc
   * Fixed SlitTheme (Henrik)
     Slit.cc/hh	 
   * Removed old theme engine (Henrik)
     Theme.hh/cc
   * Added RootTheme.hh/cc (Henrik)
     Screen.hh/cc, Workspace.cc, Slit.cc, IconBar.cc, Toolbar.cc
	 fluxbox.cc
*03/04/24:
  * updated fluxbox-generate_menu (Han)
   - decent reply to -- longopts